force-app/main/default/objects/Events__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Event ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>