force-app/main/default/objects/Events__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compassion in Action Conference</fullName>
            </value>
            <value>
                <fullName>Compassion in Action Webinar</fullName>
            </value>
            <value>
                <fullName>Community_Connections</fullName>
                <label>Community Connections</label>
            </value>
            <value>
                <fullName>Member Community Schwartz Rounds</fullName>
            </value>
            <value>
                <fullName>Rounds Facilitation Workshop</fullName>
            </value>
            <value>
                <fullName>Thought Leadership/Dev</fullName>
            </value>
            <value>
                <fullName>Office Hours Webinar</fullName>
            </value>
            <value>
                <fullName>HMS Compassion In Practice Course</fullName>
                <isActive>false</isActive>
                <label>HMS Compassion In Practice Course</label>
            </value>
            <value>
                <fullName>Online Learning Course</fullName>
                <isActive>false</isActive>
                <label>Online Learning Course</label>
            </value>
            <value>
                <fullName>Trauma-Informed Facilitation Skills</fullName>
                <isActive>false</isActive>
                <label>Trauma-Informed Facilitation Skills</label>
            </value>
            <value>
                <fullName>Unit-Based Schwartz Rounds</fullName>
                <isActive>false</isActive>
                <label>Unit-Based Schwartz Rounds</label>
            </value>
            <value>
                <fullName>Virtual Schwartz Rounds</fullName>
                <isActive>false</isActive>
                <label>Virtual Schwartz Rounds</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>