force-app/main/default/objects/Events__c/fields/TEMP_Host_ID__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Host_ID__c</fullName>
    <label>TEMP_Host_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>