force-app/main/default/objects/Events__c/fields/Total_Attended__c.field-meta.xml
<CustomField>
    <fullName>Total_Attended__c</fullName>
    <label>Total Attended</label>
    <summaryFilterItems>
        <field>Event_Attendee__c.Attended__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>