force-app/main/default/objects/Events__c/fields/Total_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendees__c</fullName>
    <inlineHelpText>Total number registered for the event -- includes attendees and no-shows.</inlineHelpText>
    <label>Total Registrants</label>
    <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>