force-app/main/default/objects/Events__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Event_ID__c</columns>
    <columns>Series__c</columns>
    <columns>NAME</columns>
    <columns>Total_Attendees__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Host__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>